--- a/templates/add_business.html
+++ b/templates/add_business.html
@@ -23,6 +23,15 @@
         {% endfor %}
     </p>
     <p>
+        {{ form.category.label }}<br>
+        {{ form.category(class="form-select") }}<br>
+        {% for error in form.category.errors %}
+            <p class="alert alert-danger" role="alert">
+                {{ error }}
+            </p>
+        {% endfor %}
+    </p>
+    <p>
         {{ form.start_date.label }}<br>
         {{ form.start_date(class="form-control", type="datetime-local", min="{{datetime.now}}") }}<br>
         {% for error in form.start_date.errors %}
