--- a/templates/redact_business.html
+++ b/templates/redact_business.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>{{ title }}</h1>
-<form action="" method="post">
+<form action="" method="post" >
     {{ form.hidden_tag() }}
     <p>
         {{ form.title.label }}<br>
@@ -33,14 +33,17 @@
     </p>
     <p>
         {{ form.end_date.label }}<br>
-        {{ form.end_date(class="form-control", type="datetime-local") }}<br>
+        {{ form.end_date(class="form-control", type="datetime-local" }}<br>
         {% for error in form.end_date.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
         {% endfor %}
     </p>
+            <div>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+    <a href="/" class="btn btn-danger">Отмена</a>
+    </div>
     {{message}}
 </form>
 {% endblock %}
