--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
- <form action="" method="post">
+ <form action="" method="post" >
         {{ form.hidden_tag() }}
         <p>
             {{ form.login.label }}<br>
@@ -24,5 +24,6 @@
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
         <div>{{ message }}</div>
+        <a class="navbar-brand" href="/registration">Зарегистрироваться</a>
  </form>
 {% endblock %}
