--- a/templates/registration.html
+++ b/templates/registration.html
@@ -49,7 +49,7 @@
         {% endfor %}
     </p>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    <a class="navbar-brand" href="/login">Уже зарегистрированы? Авторизуйтесь.</a>
+    <a class="navbar-brand" href="/login">Уже зарегистрированы? Авторизуйтесь!</a>
     {{message}}
     </form>
 {% endblock %}
