--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
- <form action="" method="post" >
+<link rel="stylesheet" href="{{url_for('.static', filename='/css/form.css', _scheme='https')}}">
+<h1>Авторизация</h1>
+ <form action="" method="post" class="form_universal">
         {{ form.hidden_tag() }}
         <p>
             {{ form.login.label }}<br>
