--- a/templates/redact_business.html
+++ b/templates/redact_business.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+<link rel="stylesheet" href="{{url_for('.static', filename='/css/form.css', _scheme='https')}}">
 <h1>{{ title }}</h1>
-<form action="" method="post" >
+<form action="" method="post" class="form_universal">
     {{ form.hidden_tag() }}
     <p>
         {{ form.title.label }}<br>
