--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
+<link rel="stylesheet" href="{{url_for('.static', filename='css/context_menu.css', _scheme='https')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='css/context_menu.css', _scheme='http')}}">
 <div>
-    <p class="navbar-brand" >{{ current_user.name }} {{ current_user.surname }} <a href="/logout" class="btn btn-danger">Выйти</a></p>
+    <p class="navbar-brand" >{{ current_user.login }} <a href="/logout" class="btn btn-danger">Выйти</a></p>
 </div>
 
 <div>
@@ -24,4 +26,15 @@
             {% endfor %}
         {% endif %}
         </ul>
+<nav id="context-menu" class="context-menu">
+      <li class="context-menu__item">
+        <a href="#" class="context-menu__link" data-action="redact_category"><i class="fa fa-edit"></i>Изменить</a>
+      </li>
+      <li class="context-menu__item">
+        <a href="#" class="context-menu__link" data-action="delete_category"><i class="fa fa-times"></i>Удалить</a>
+      </li>
+    </ul>
+  </nav>
+    <script src="{{url_for('.static', filename='js/context_menu.js', _scheme='https')}}"></script>
+<script src="{{url_for('.static', filename='js/context_menu.js', _scheme='http')}}"></script>
 {% endblock %}
