--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,16 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <link rel="stylesheet" href="{{url_for('.static', filename='/css/form.css', _scheme='https')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='css/form.css', _scheme='https')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='css/form.css', _scheme='http')}}">
     <h1>Регистрация</h1>
     <form action="" method="post" class="form_universal">
 
      {{ form.hidden_tag() }}
      <p>
-
         {{ form.login.label }}<br>
         {{ form.login(class="form-control") }}<br>
         {% for error in form.login.errors %}
+            <p class="alert alert-danger" role="alert">
+                {{ error }}
+            </p>
+        {% endfor %}
+    </p>
+    <p>
+        {{ form.email.label }}<br>
+        {{ form.email(class="form-control") }}<br>
+        {% for error in form.email.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
@@ -34,26 +43,9 @@
             </p>
         {% endfor %}
     </p>
-    <p>
-        {{ form.surname.label }}<br>
-        {{ form.surname(class="form-control") }}<br>
-        {% for error in form.surname.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.name.label }}<br>
-        {{ form.name(class="form-control") }}<br>
-        {% for error in form.name.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
     <a class="navbar-brand" href="/login">Уже зарегистрированы? Авторизуйтесь!</a>
+    <a class="navbar-brand" href="/request_for_password_reset">Забыли пароль?</a>
     {{message}}
     </form>
 
