--- a/templates/current_businesses.html
+++ b/templates/current_businesses.html
@@ -11,14 +11,13 @@
         <li><a href="/categories">Категории</a></li>
     </ul>
 </div>
-        {% if url_for(request.endpoint) == "/"%}
             <div>
-                <h1>Задачи <a href="/add_business" class="btn btn-primary">Добавить задачу</a></h1>
+                <h1>Текущие задачи <a href="/add_business" class="btn btn-primary">Добавить задачу</a></h1>
             </div>
                 <span>Категории</span>
                 <select class="select">
-                    <option value="/">Все задачи</option>
                     <option value="/current_businesses">Текущие задачи</option>
+                    <option value="/">Все задачи</option>
                     <option value="/ended_businesses">Оконченные задачи</option>
                     {% for category in categories %}
                         <option value="/index/{{category.title}}">{{category.title}}</option>
@@ -75,12 +74,12 @@
                     </table>
                 </li></div>
                 {% endfor %}
-            {% elif businesses == []%}
-                <h1>Задачи <a href="/add_business" class="btn btn-primary">Добавить задачу</a></h1>
-            {% endif %}
             </ul>
     <nav id="context-menu" class="context-menu">
         <ul class="context-menu__items" id="context-menu__items">
+            <li class="context-menu__item">
+            <a href="#" class="context-menu__link" data-action="disable_business"><i class="fa fa-eye"></i>Отметить как выполненную</a>
+      </li>
       <li class="context-menu__item">
         <a href="#" class="context-menu__link" data-action="redact_business"><i class="fa fa-edit"></i>Изменить</a>
       </li>
