--- a/templates/reset_password_email.html
+++ b/templates/reset_password_email.html
@@ -14,6 +14,7 @@
 </p>
 <p>Кроме того, вы можете вставить следующую ссылку в адресную строку браузера:</p>
 <p>{{ url_for('reset_password', token=token, _external=True) }}</p>
+<p>Срок действия ссылки - 10 минут</p>
 <p>Если вы не запрашивали сброс пароля, просто проигнорируйте это сообщение.</p>
 </body>
 </html>
