--- a/templates/add_business.html
+++ b/templates/add_business.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<link rel="stylesheet" href="{{url_for('.static', filename='css/form.css', _scheme='https')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='css/form_business.css', _scheme='https')}}">
 <link rel="stylesheet" href="{{url_for('.static', filename='css/context_menu.css', _scheme='https')}}">
 <link rel="stylesheet" href="{{url_for('.static', filename='css/context_menu.css', _scheme='http')}}">
-<link rel="stylesheet" href="{{url_for('.static', filename='css/form.css', _scheme='http')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='css/form_business.css', _scheme='http')}}">
 <h1>{{ title }}</h1>
 <form action="" method="post" class="form_universal">
     {{ form.hidden_tag() }}
