--- a/templates/redact_business.html
+++ b/templates/redact_business.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-<link rel="stylesheet" href="{{url_for('.static', filename='/css/form.css', _scheme='https')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='css/form_business.css', _scheme='https')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='css/form_business.css', _scheme='http')}}">
 <h1>{{ title }}</h1>
 <form action="" method="post" class="form_universal">
     {{ form.hidden_tag() }}
